# beer_temp_server

./: .gitignore  CMakeLists.txt  readme.md
src/: base64.c  base64.h  beer_server.c  beer_server.h  beer_types.h  beer_utils.c  beer_utils.h  client_simple_test.c  libwebsockets_simple_server.c  protocol_dumb_increment.c  protocol_lws_minimal.c  run_beer_client.c  run_beer_server.c  simple_server.c  ws_handshake_test.c
test/: CMakeLists.txt  check_dummy.c
web_client/: index.html
web_client/scripts/: main.js  user_input.js  websocket.js
web_client/styles/: style.css
